<resources>
    <string name="app_name">Eventster</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_create_new">Create New</string>
    <string name="title_aboutme">About me</string>
    <string name="title_activity_search">Search</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search me</string>
    <string name="search">Search</string>
    <string name="action_settings">action</string>
    <string name="title_activity_view_entity">ViewEntity</string>
    <string name="name">Name</string>
    <string name="describtion">Description</string>
    <string name="radioButton_public">public</string>
    <string name="radioButton_private">private</string>
    <string name="title_activity_create_new">CreateNewActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lorem_impsum">lorem ipsum</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">login</string>
    <string name="signUp_button">Sign Up</string>
    <string name="events">Events</string>
    <string name="groups">Groups</string>
    <string name="users">Users</string>
    <string name="retype_pass_hint">Retype_password</string>
    <string name="email_hint">Email</string>
    <string name="group_prompt">Choose a group</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="save_login_information">Save login information</string>
    <string name="add_members">add members</string>


</resources>
