<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:visible="true" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24dp"
        android:title="@string/title_search"
        android:visible="true" />

    <item
        android:id="@+id/navigation_create_new"
        android:icon="@drawable/ic_baseline_add_circle_24dp"
        android:title="@string/title_create_new"
        android:visible="true" />

    <item
        android:id="@+id/navigation_aboutme"
        android:icon="@drawable/ic_baseline_menu_24dp"
        android:title="@string/title_aboutme"
        android:visible="true" />

</menu>
