<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/login_linearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <TextView
        android:id="@+id/login_not_valid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/errorColor" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp_button" />

</LinearLayout>