<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/createPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/create_group_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Group"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <RadioGroup
            android:id="@+id/group_vis_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/group_public_create"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/group_public_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButton_public"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/group_private_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButton_private"
                android:textSize="16dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/grp_name_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText5"
            android:text="Group Name"
            android:textSize="16dp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/group_name_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Name hint"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/grp_info_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText6"
            android:text="Description"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/group_info_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="multilinehint"
            android:ems="10"
            android:hint="@string/describtion"
            android:inputType="textMultiLine"
            android:textSize="18sp" />

        <Button
            android:id="@+id/create_group_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:text="Create Group"
            android:textSize="18sp" />

    </LinearLayout>



</RelativeLayout>